--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,6 +14,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 #path config
 user.profile.image.path=images/user/
 category.profile.image.path=images/category/
+product.profile.image.path=images/product/
 
 #file config
 spring.servlet.multipart.max-file-size=10MB
